--- a/app/views/lists/_add_item_form.html.erb
+++ b/app/views/lists/_add_item_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@list) do |lb| %>
+<%= form_for(@list, url: create_item_list_path(@list), method: :post, remote: true) do |lb| %>
   <div class="modal-header">
     <h4 class="modal-title" id="addItemModalLabel"><strong>Add new item:</strong></h4>
   </div>
