adds items controller

--- a/app/views/items/save_done.js.erb
+++ b/app/views/items/save_done.js.erb
@@ -1,4 +1,4 @@
-var itemTr = $('tr[data-item=<%= @item_id%>]').remove();
+var itemTr = $('tr[data-item=<%= @item.id%>]').remove();
 $('#items-done').append('<%= j(render :partial => "lists/item", locals: {item: @item}) %>');
 $('#total_sum').text('<%= items_sum(current_user, @items_for_selected_category, @list) %>');
 $('#itemModal').modal('hide');
