--- a/app/views/lists/_item.html.erb
+++ b/app/views/lists/_item.html.erb
@@ -5,7 +5,12 @@
   <td><%= item.unit %></td>
   <% unless item.done %>
     <td>
-      <%= link_to(delete_item_list_path(@list, item_id: item.id), class: "pull-right btn-trash remove_item", remote: true, method: :delete, data: { confirm: "Are you sure?" }) do %>
+      <%= link_to(edit_list_item_path(@list, item.id), class: "pull-right btn-edit-item", remote: true) do %>
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+      <% end %>
+    </td>
+    <td>
+      <%= link_to(list_item_path(@list, item), class: "pull-right btn-trash remove_item", remote: true, method: :delete, data: { confirm: "Are you sure?" }) do %>
         <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
       <% end %>
     </td>
