--- a/app/views/lists/_item.html.erb
+++ b/app/views/lists/_item.html.erb
@@ -1,8 +1,9 @@
+
 <tr data-category="<%= item.category_id %>" data-item="<%= item.id %>" data-list="<%= item.list.id%>" class="rows">
   <td><%= check_box_tag :done, item.done, item.done?, class: 'checkDone', id: item.id, data: {list: item.list.id} %></td>
   <td><%= item_link(item) %></td>
   <td><%= item.qty %></td>
-  <td><%= item.unit %></td>
+  <td><%= item.unit.nil? ? '' : item.unit.name %></td>
   <% unless item.done %>
     <td>
       <%= link_to(edit_list_item_path(@list, item.id), class: "pull-right btn-edit-item", remote: true) do %>
