--- a/app/views/items/_add_item_form.html.erb
+++ b/app/views/items/_add_item_form.html.erb
@@ -3,9 +3,9 @@
     <h4 class="modal-title" id="addItemModalLabel"><strong>Add new item:</strong></h4>
   </div>
   <div class="modal-body">
-    <div class="form-group">
-      <label for="item-category" class="control-label">Category</label>
-      <%= f.select :category_id, current_user.categories.collect {|p| [ p.name, p.id ] }, {prompt: 'Select Category'}, {class: 'category-select'} %>
+    <div class="form-group category-select">
+      <label for="item-category" class="control-label category_label">Category</label>
+      <%= f.select :category_id, current_user.categories.collect {|p| [ p.name, p.id ] }, {prompt: 'Select Category'}, {class: 'category-select-search'} %>
     </div>
     <div class="form-group item-name">
       <label for="item-name" class="control-label">Name</label>
@@ -15,9 +15,9 @@
       <label for="item-qty" class="control-label">Quantity</label>
       <%= f.text_field :qty, id: "item-qty", value: '' %>
     </div>
-    <div class="form-group">
-      <label for="item-unit" class="control-label">Unit</label>
-      <%= f.select :unit, Item::UNIT_TYPES, prompt: 'Select Unit', id: "item-unit" %>
+    <div class="form-group unit-select">
+      <label for="item-unit" class="control-label unit_label">Unit</label>
+      <%= f.select :unit_id, current_user.units.collect {|p| [ p.name, p.id ] }, prompt: 'Select Unit', id: "item-unit" %>
     </div>
     <div class="form-group">
       <label for="item-price" class="control-label">Price/Unit</label>
