--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -3,8 +3,8 @@
   <%= 'Show' %>
   <%= select_tag(:period, options_for_select([['All', 1000], ['Today', 1], ['Last 15 days', 15], ['Last Month', 30]], 1000)) %>
   <%= link_to 'Filter', '#', id: 'filterButton', class: 'btn btn-info' %>
-</div>
-<canvas id="myChart" width="400" height="400"></canvas>
+</div><br>
+<canvas id="myChart" width="350" height="350"></canvas>
 <div>
   <%= link_to 'Switch View', '#', id: 'switchReport', class: 'btn btn-info' %>
 </div>
