--- a/app/views/items/_add_item_form.html.erb
+++ b/app/views/items/_add_item_form.html.erb
@@ -11,7 +11,7 @@
       <label for="item-name" class="control-label">Name</label>
       <%= f.text_field :name, id: "item-name" %>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
       <label for="item-qty" class="control-label">Quantity</label>
       <%= f.text_field :qty, id: "item-qty", value: '' %>
     </div>
@@ -21,6 +21,14 @@
     </div>
     <div class="form-group">
       <label for="item-price" class="control-label">Price/Unit</label>
+      <%= f.text_field :price, id: "item-price", value: '' %>
+    </div> -->
+    <div class="form-group item-description">
+        <label for="item-description" class="control-label">Description</label>
+        <%= f.text_field :description, id: "item-description" %>
+      </div>
+    <div class="form-group">
+      <label for="item-price" class="control-label">Price</label>
       <%= f.text_field :price, id: "item-price", value: '' %>
     </div>
     <div class="form-group">
