--- a/app/views/items/_item_form.html.erb
+++ b/app/views/items/_item_form.html.erb
@@ -10,16 +10,24 @@
       <label for="item-category" class="control-label category_label">Category</label>
       <%= f.select :category_id, current_user.categories.collect {|p| [ p.name, p.id ] }, {prompt: 'Select Category'}, {class: 'category-select-search'} %>
       </div>
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="item-qty" class="control-label">Quantity</label>
         <%= f.text_field :qty, id: "item-qty" %>
-      </div>
-      <div class="form-group unit-select">
+      </div> -->
+      <!-- <div class="form-group unit-select">
         <label for="item-unit" class="control-label unit_label">Unit</label>
         <%= f.select :unit_id, current_user.units.collect {|p| [ p.name, p.id ] }, prompt: 'Select Unit', id: "item-unit" %>
+      </div> -->
+      <!-- <div class="form-group">
+        <label for="item-price" class="control-label">Price/Unit</label>
+        <%= f.text_field :price, id: "item-price" %>
+      </div> -->
+      <div class="form-group item-description">
+        <label for="item-description" class="control-label">Description</label>
+        <%= f.text_field :description, id: "item-description" %>
       </div>
       <div class="form-group">
-        <label for="item-price" class="control-label">Price/Unit</label>
+        <label for="item-price" class="control-label">Price</label>
         <%= f.text_field :price, id: "item-price" %>
       </div>
     </div>
