--- a/app/views/lists/_item_fields.html.erb
+++ b/app/views/lists/_item_fields.html.erb
@@ -1,4 +1,4 @@
-<tr class="fields">
+<!-- <tr class="fields">
   <td>
     <%= f.select(:category_id, current_user.categories.collect {|p| [ p.name, p.id ] }, {prompt: 'Select Category', selected: f.object.category_id}, class: 'category-select') %>
   </td>
@@ -18,3 +18,4 @@
     <%= remove_link_unless_new_record("Remove", f, "remove_item") -%>
   </td>
 </tr>
+ -->
