--- a/app/views/items/_add_item_form.html.erb
+++ b/app/views/items/_add_item_form.html.erb
@@ -17,7 +17,7 @@
       </div>
     <div class="form-group">
       <label for="item-price" class="control-label">Price</label>
-      <%= f.text_field :price, id: "item-price", value: 0 %>
+      <%= f.text_field :price, id: "item-price" %>
     </div>
     <div class="form-group">
       <label for="done" class="control-label">Done</label>
