--- a/app/views/items/_edit_item_form.html.erb
+++ b/app/views/items/_edit_item_form.html.erb
@@ -16,7 +16,7 @@
       </div>
       <div class="form-group">
       <label for="item-price" class="control-label">Price</label>
-      <%= f.text_field :price, id: "item-price", value: '' %>
+      <%= f.text_field :price, id: "item-price" %>
     </div>
     </div>
   </div>
