--- a/app/views/lists/create.js.erb
+++ b/app/views/lists/create.js.erb
@@ -1,1 +1,2 @@
 $('#newListModal').modal('hide');
+$('#lists tbody').append('<%= j(render :partial => "lists/list_row", locals: {list: @list}) %>');
