--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -18,22 +18,10 @@
   <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 <% end %>
 
-<table>
+<table id='lists'>
   <tbody>
     <% @lists.each do |list| %>
-      <tr id="list-<%=list.id%>">
-        <td id="list-name-<%=list.id%>" style="width:25%;"><strong><%= link_to list.name, list %></strong></td>
-        <td style="width:20%;">
-          <%= link_to(edit_list_path(list), remote: true) do %>
-            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-          <% end %>
-        </td>
-        <td style="width:20%;">
-          <%= link_to((list), remote: true, method: :delete, data: { confirm: "Are you sure?" }) do %>
-            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-          <% end %>
-        </td>
-      </tr>
+      <%= (render :partial => "list_row", locals: {list: list}) %>
     <% end %>
   </tbody>
 </table>
