models specs refactoring

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -60,4 +60,5 @@
     ]
   };
   Report.drawChart('myChart', 'Pie', pieData, {animateScale : false, animationEasing : '', animationSteps : 50});
+   $('#currency_select').prop('disabled', 'disabled');
 <% end -%>
