--- a/app/views/lists/_item.html.erb
+++ b/app/views/lists/_item.html.erb
@@ -1,7 +1,7 @@
 
 <tr data-category="<%= item.category_id %>" data-item="<%= item.id %>" data-list="<%= item.list.id%>" class="rows">
   <td><%= check_box_tag :done, item.done, item.done?, class: 'checkDone', id: item.id, data: {list: item.list.id} %></td>
-  <td><%= item_link(item) %></td>
+  <td><b><%= item.name %></b></td>
   <td><%= item.price %></td>
   <% unless item.done %>
     <td>
