--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -80,7 +80,7 @@
 <div style="display:inline-block;">
   <strong> Done Items </strong>
   <strong> &#931; </strong>
-  <strong id="total_sum"><%= total_sum(current_user, @list) %></strong>
+  <strong id="total_sum"><%= total_items_sum(current_user, @list) %></strong>
 </div>
 </a>
 <br><br>
