--- a/app/views/items/undone.js.erb
+++ b/app/views/items/undone.js.erb
@@ -1,6 +1,6 @@
 var itemTr = $('tr[data-item=<%= @item.id%>]').remove();
 $('#items-not-done tbody').append('<%= j(render :partial => "lists/item", locals: {item: @item}) %>');
-$('#total_sum').text('<%= items_sum(current_user, @items_for_selected_category, @list) %>');
+$('#total_sum').text('<%= total_items_sum(current_user, @list, @items_for_selected_category) %>');
 
 <% if @disable_currency_select %>
   $('#currency_select').prop('disabled', 'disabled');
